--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <img src="images/header2.jpg">
         <a href="https://mrowki.eu.org/licznik/">Slings Counter</a>
-        <a href="http://localhost:63342/search/static/about.html">About</a>
+        <a href="about.html">About</a>
     </header>
 
     <div class="container">
