--- a/about.html
+++ b/about.html
@@ -15,15 +15,18 @@
 </head>
 <body>
   <header>
-    <img src="images/header2.jpg">
-    <a href="https://mrowki.eu.org/licznik/">Slings Counter</a>
-    <a href="http://localhost:63342/search/static/index.html">Home</a>
+    <img src="images/2.jpg">
+    <nav id="nav-1">
+      <a class="link-1" href="index.html">Home</a>
+      <a class="link-1" href="https://mrowki.eu.org/licznik/">Slings Counter</a>
+      <a class="link-1" href="about.html">About</a>
+    </nav>
   </header>
 
   <main class="main-grid">
     <div class="head">
       <h1 class="page-title">About us</h1>
-      <p class="subtitle">This website has been created to search for your dream spider thru all known websites and marketplaces.<br><b>NOTE:</b> You are buying at your own risk.</p>
+      <p class="subtitle">This website has been created to search for your dream spider through all known websites and marketplaces.<br><b>NOTE:</b> You are buying at your own risk.</p>
     </div>
     <img class="main-image" src="images/Dolichothele%20diamantinensis.jpg">
 
@@ -31,18 +34,22 @@
       <h2 class="section-title">How to increase website search</h2>
       <p>If you know any sellers website or you are one of them and you want to be included in search results, please contact me directly thru my fanpage: <a href="https://www.facebook.com/venomousbirdeaters">Venomous Birdeaters</a></p>
 
-      <h2 class="section-title sub">Website search thru:</h2>
+      <h2 class="section-title sub">Website search through:</h2>
       <p><a href="https://www.spidersworld.eu/">Spiders World</a></p>
       <p><a href="https://eurospiders.pl/">Euro Spiders</a></p>
-      <p><a href="https://www.spidersfactory.pl/">Spiders Factory</a></p>
-      <p><a href="https://argiopeterra.pl/">Argiopeterra</a></p>
       <p><a href="https://spidershop.pl/">Spidershop</a></p>
+      <p><a href="https://arent.pl/">Arent</a></p>
+      <p><a href="https://arachnohobbia.pl/">Arachnohobbia</a></p>
+      <p><a href="https://jadowite.pl/">Jadowite</a></p>
+
+      <!--      <p><a href="https://www.spidersfactory.pl/">Spiders Factory</a></p>-->
+<!--      <p><a href="https://argiopeterra.pl/">Argiopeterra</a></p>-->
     </div>
 
   </main>
 
   <div class="footer">
-    <p>©2022 Mateusz Skrzypek - All rights reserved.</p>
+    <p>©2023 Mateusz Skrzypek - All rights reserved.</p>
   </div>
 </body>
 </html>
