--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 </head>
 <body>
     <header>
-        <img src="images/header2.jpg">
-        <a href="https://mrowki.eu.org/licznik/">Slings Counter</a>
-        <a href="about.html">About</a>
+        <img src="images/2.jpg">
+        <nav id="nav-1">
+            <a class="link-1" href="index.html">Home</a>
+            <a class="link-1" href="https://mrowki.eu.org/licznik/">Slings Counter</a>
+            <a class="link-1" href="about.html">About</a>
+        </nav>
     </header>
 
     <div class="container">
@@ -36,8 +39,8 @@
                                             <select class="form-control" filter-select>
                                                 <option value="0" selected>None</option>
                                                 <option value="1">Name</option>
-                                                <option value="2">Lowest Price</option>
-                                                <option value="3">Biggest Price</option>
+                                                <option value="2" disabled>Lowest Price - coming soon</option>
+                                                <option value="3" disabled>Biggest Price - coming soon</option>
                                             </select>
                                         </div>
                                         <div class="form-group">
@@ -60,15 +63,11 @@
                                             </select>
 
                                         </div>
-<!--                                        <div class="form-group">-->
-<!--                                            <label for="contain">Contains the words</label>-->
-<!--                                            <input class="form-control" type="text" />-->
-<!--                                        </div>-->
-                                        <button type="submit" class="btn btn-primary" data-search-button>Search</button>
+<!--                                        <button type="submit" class="btn btn-primary" data-search-button>Search</button>-->
                                     </form>
                                 </div>
                             </div>
-                            <button type="button" class="btn btn-primary" data-search-button-2>Search</button>
+                            <button type="submit" class="btn btn-primary" data-search-button data-search-button-2>Search</button>
                         </div>
                     </div>
                 </div>
@@ -95,7 +94,7 @@
     </template>
 
     <div class="footer">
-        <p>©2022 Mateusz Skrzypek - All rights reserved.</p>
+        <p>©2023 Mateusz Skrzypek - All rights reserved.</p>
     </div>
 
 </body>
