--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
     <div class="main-text">
       <h2 class="section-title">How to increase website search</h2>
-      <p>If you know any sellers website or you are one of them and you want to be included in search results, please contact me directly thru my fanpage: <a href="https://www.facebook.com/venomousbirdeaters">Venomous Birdeaters</a></p>
+      <p>If you know any sellers website or you are one of them and you want to be included in search results, please contact me directly through my fanpage: <a href="https://www.facebook.com/venomousbirdeaters">Venomous Birdeaters</a></p>
 
       <h2 class="section-title sub">Website search through:</h2>
       <p><a href="https://www.spidersworld.eu/">Spiders World</a></p>
@@ -41,6 +41,7 @@
       <p><a href="https://arent.pl/">Arent</a></p>
       <p><a href="https://arachnohobbia.pl/">Arachnohobbia</a></p>
       <p><a href="https://jadowite.pl/">Jadowite</a></p>
+      <p><a href="https://spidersonline.pl/">Jadowite</a></p>
 
       <!--      <p><a href="https://www.spidersfactory.pl/">Spiders Factory</a></p>-->
 <!--      <p><a href="https://argiopeterra.pl/">Argiopeterra</a></p>-->
