Changed about img

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <img src="images/2.jpg">
+    <img src="images/Cyriocosmus-ritae.jpg">
     <nav id="nav-1">
       <a class="link-1" href="index.html">Home</a>
       <a class="link-1" href="https://mrowki.eu.org/licznik/">Slings Counter</a>
