--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                             <label for="filter">Filter by Area:</label>
                                             <select class="form-control" area-select>
                                                 <option value="0" selected>All</option>
-                                                <option value="1">Europe</option>
+                                                <option value="1" disabled>Europe - comming soon</option>
                                                 <option value="2" disabled>UK - comming soon</option>
                                                 <option value="2" disabled>USA - comming soon</option>
                                             </select>
