Updated spiders online

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
       <p><a href="https://arent.pl/">Arent</a></p>
       <p><a href="https://arachnohobbia.pl/">Arachnohobbia</a></p>
       <p><a href="https://jadowite.pl/">Jadowite</a></p>
-      <p><a href="https://spidersonline.pl/">Jadowite</a></p>
+      <p><a href="https://spidersonline.pl/">Spiders Online</a></p>
 
       <!--      <p><a href="https://www.spidersfactory.pl/">Spiders Factory</a></p>-->
 <!--      <p><a href="https://argiopeterra.pl/">Argiopeterra</a></p>-->
