--- a/index.html
+++ b/index.html
@@ -12,17 +12,50 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="navigationStyles.css">
+
 </head>
 <body>
     <header>
         <img src="images/Cyriocosmus-ritae.jpg">
-        <nav id="nav-1">
-            <a class="link-1" href="index.html">Home</a>
-            <a class="link-1" href="https://mrowki.eu.org/licznik/">Slings Counter</a>
-            <a class="link-1" href="about.html">About</a>
+        <nav class="responsive">
+            <a href="javascript:void(0);" class="icon" onclick="toggleModal()">&#9776;</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#slings-counter">Slings Counter</a>
+            <a href="#donate">Donate</a>
         </nav>
-    </header>
 
+        <!-- Modal -->
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <a href="javascript:void(0);" class="icon" onclick="toggleModal()">&#10006;</a>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#slings-counter">Slings Counter</a>
+                <a href="#donate">Donate</a>
+            </div>
+        </div>
+
+        <script>
+            function toggleModal() {
+                var modal = document.getElementById('myModal');
+                modal.classList.toggle('active');
+            }
+        </script>
+
+
+        <!--        <script>-->
+<!--            function myFunction() {-->
+<!--                var x = document.querySelector("nav");-->
+<!--                if (x.className === "responsive") {-->
+<!--                    x.className += " responsive";-->
+<!--                } else {-->
+<!--                    x.className = "responsive";-->
+<!--                }-->
+<!--            }-->
+<!--        </script>-->
+    </header>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
