--- a/index.html
+++ b/index.html
@@ -18,44 +18,14 @@
 <body>
     <header>
         <img src="images/Cyriocosmus-ritae.jpg">
-        <nav class="responsive">
-            <a href="javascript:void(0);" class="icon" onclick="toggleModal()">&#9776;</a>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#slings-counter">Slings Counter</a>
-            <a href="#donate">Donate</a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="https://mrowki.eu.org/licznik/">Slings Counter</a>
+            <a href="#">Donate</a>
         </nav>
-
-        <!-- Modal -->
-        <div id="myModal" class="modal">
-            <div class="modal-content">
-                <a href="javascript:void(0);" class="icon" onclick="toggleModal()">&#10006;</a>
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#slings-counter">Slings Counter</a>
-                <a href="#donate">Donate</a>
-            </div>
-        </div>
-
-        <script>
-            function toggleModal() {
-                var modal = document.getElementById('myModal');
-                modal.classList.toggle('active');
-            }
-        </script>
-
-
-        <!--        <script>-->
-<!--            function myFunction() {-->
-<!--                var x = document.querySelector("nav");-->
-<!--                if (x.className === "responsive") {-->
-<!--                    x.className += " responsive";-->
-<!--                } else {-->
-<!--                    x.className = "responsive";-->
-<!--                }-->
-<!--            }-->
-<!--        </script>-->
     </header>
+
     <div class="container">
         <div class="row">
             <div class="col-md-12">
