Refactored about and navigation

--- a/about.html
+++ b/about.html
@@ -37,13 +37,34 @@
       <p>If you know any sellers website or you are one of them and you want to be included in search results, please contact me directly through my fanpage: <a href="https://www.facebook.com/venomousbirdeaters">Venomous Birdeaters</a></p>
 
       <h2 class="section-title sub">Website search through:</h2>
-      <p><a href="https://www.spidersworld.eu/">Spiders World</a></p>
-      <p><a href="https://eurospiders.pl/">Euro Spiders</a></p>
-      <p><a href="https://spidershop.pl/">Spidershop</a></p>
-      <p><a href="https://arent.pl/">Arent</a></p>
-      <p><a href="https://arachnohobbia.pl/">Arachnohobbia</a></p>
-      <p><a href="https://jadowite.pl/">Jadowite</a></p>
-      <p><a href="https://spidersonline.pl/">Spiders Online</a></p>
+      <div class="container">
+        <div class="column">
+          <a href="https://venomous-birdeaters.eu/">Venomous Birdeaters</a>
+          <a href="https://www.spidersworld.eu/">Spiders World</a>
+          <a href="https://eurospiders.pl/">Euro Spiders</a>
+          <a href="https://spidershop.pl/">Spidershop</a>
+          <a href="https://www.spfshop.pl/">Spider's Forge</a>
+        </div>
+        <div class="column">
+          <a href="https://arent.pl/">Arent</a>
+          <a href="https://arachnohobbia.pl/">Arachnohobbia</a>
+          <a href="https://jadowite.pl/">Jadowite</a>
+          <a href="https://argiopeterra.pl/">Argiopeterra</a>
+        </div>
+        <div class="column">
+          <a href="https://spidersonline.pl/">Spiders Online</a>
+          <a href="https://spiderlublin.pl/">Spiders Lublin</a>
+          <a href="https://spiderslaboratory.pl/">Spiders Laboratory</a>
+          <a href="https://www.spidersfactory.pl/">Spiders Factory</a>
+        </div>
+      </div>
+
+
+
+
+
+
+
 
       <!--      <p><a href="https://www.spidersfactory.pl/">Spiders Factory</a></p>-->
 <!--      <p><a href="https://argiopeterra.pl/">Argiopeterra</a></p>-->
