Added papa spiders

--- a/about.html
+++ b/about.html
@@ -59,6 +59,8 @@
           <hr>
           <a href="https://argiopeterra.pl/">Argiopeterra</a>
           <hr>
+          <a href="https://papaspiders.pl/">Papa spiders</a>
+          <hr>
         </div>
         <div class="column">
           <a href="https://spidersonline.pl/">Spiders Online</a>
