--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
                                                 <option value="2" disabled>USA - comming soon</option>
                                             </select>
                                         </div>
+                                        <div class="form-group">
+                                            <div id="tooltip">
+                                                <label for="filter">Currency</label>
+                                                <span class="tooltiptext">Currency will be calculated with the latest notes and may be different than on seller website.</span>
+                                            </div>
+                                            <select class="form-control" filter-select>
+                                                <option value="0" selected>PLN</option>
+                                                <option value="1" disabled>€</option>
+                                                <option value="2" disabled>$</option>
+                                            </select>
+                                        </div>
                                         <div class="form-group" >
                                             <div id="tooltip">
                                                 <label for="filter">Trusted:</label>
@@ -73,7 +84,6 @@
                                             </select>
 
                                         </div>
-<!--                                        <button type="submit" class="btn btn-primary" data-search-button>Search</button>-->
                                     </form>
                                 </div>
                             </div>
