--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                                             <select class="form-control" filter-select>
                                                 <option value="0" selected>None</option>
                                                 <option value="1">Name</option>
-                                                <option value="2" disabled>Lowest Price - coming soon</option>
-                                                <option value="3" disabled>Biggest Price - coming soon</option>
+                                                <option value="2">Lowest Price</option>
+                                                <option value="3">Biggest Price</option>
                                             </select>
                                         </div>
                                         <div class="form-group">
